--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,11 @@ django-cors-headers==4.6.0
 django-js-asset==2.2.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
 idna==3.10
 lxml==5.3.0
 oauthlib==3.2.2
+packaging==24.2
 pillow==11.0.0
 pycparser==2.22
 PyJWT==2.10.0
@@ -24,3 +26,4 @@ sqlparse==0.5.2
 striprtf==0.0.27
 typing_extensions==4.12.2
 urllib3==2.2.3
+whitenoise==6.8.2
