--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 cryptography==43.0.3
+dj-database-url==2.3.0
 Django==5.1.3
 django-allauth==65.2.0
 django-ckeditor==6.7.1
