--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ lxml==5.3.0
 oauthlib==3.2.2
 packaging==24.2
 pillow==11.0.0
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.0
 python-docx==1.1.2
